--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,16 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.3",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.4"
   }
