--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,12 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "material-ui-popup-state": "^5.1.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "styled-components": "^6.1.12"
   },
