--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "material-ui-popup-state": "^5.1.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
