--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "aos": "^2.3.4",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
