--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,11 @@
     "cloudinary": "^2.4.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "express-validator": "^7.2.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
@@ -20,6 +22,7 @@
     "mongoose": "^8.5.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "razorpay": "^2.9.4"
   }
 }
